Fix project errors and prepare for deployment